# tcp-client-ascii

./: .gitignore  CMakeLists.txt  README.md
src/: RoleSelectionWindow.cpp  RoleSelectionWindow.h  RoleSelectionWindow.ui  TcpClientWindow.cpp  TcpClientWindow.h  TcpClientWindow.ui  TcpServerWindow.cpp  TcpServerWindow.h  TcpServerWindow.ui  main.cpp
